# Dove

./: .env.production  .gitignore  docker-compose.yml  package-lock.json  package.json  vite.config.ts
Forclaudee/: Events Page (1).html  Freunde Liste.html  Profil Seite.html  Store.dc.html  eventpage2.html  profil2.html
deploy/: .env.example  README.md  backup.sh  docker-compose.postgres.yml  dove-backup.service  dove-backup.timer  dove-server.service  nginx-dove.conf
docs/: achievements-integration.md
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_orders.sql  0003_tournament_payouts.sql  0004_wallet.sql  0005_recommendations.sql  0006_game_offers.sql  0007_analytics.sql  0008_user_reports.sql  0009_user_report_images.sql  0010_unban_requests.sql  0011_user_language.sql  0012_default_language_en.sql  0013_review_votes.sql  0014_achievements.sql  0015_achievement_showcase.sql  0016_playtime_events_user_idx.sql  0017_publisher_submission_fields.sql  0018_game_demos.sql  0019_game_beta_flag.sql  0020_developer_profile.sql  0021_order_refunds.sql
server/src/: auth.rs  badges.rs  db.rs  email.rs  handler_tests.rs  handlers.rs  main.rs  models.rs  rate_limit.rs  state.rs  storage.rs
src/: App.tsx  authStore.test.ts  authStore.ts  cartStore.ts  catalogStore.test.ts  catalogStore.ts  chatStore.ts  collectionsStore.ts  downloadStore.ts  eventsStore.test.ts  eventsStore.ts  friendsStore.ts  i18nStore.ts  index.css  main.tsx  notificationsStore.ts  store.ts  theme.ts  translations.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.production.json
(+62 files in other folders)
